# GCalNotion-Integration

./: .gitignore  .replit  Google-Token-Generator.py  README.md  main.py  pyproject.toml  requirements.txt
utils/: __init__.py  db_delete.py  db_init.py  db_load.py  flask_server.py  gcal_init.py  gcal_load.py  gcal_patch.py  keep_alive.py  notion_init.py  notion_load.py  notion_patch.py
