[tool.poetry]
name = "repl_python3_GCalNotion-Integration"
version = "0.1.0"
description = ""
authors = ["Bunz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^1.1.0"
google-api-python-client = "^2.42.0"
google-auth-oauthlib = "^0.5.1"
pymongo = "^4.0.2"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
